--- a/index.html
+++ b/index.html
@@ -50,12 +50,24 @@
     <div id="event" class="event-container">
       <div class="event-wrapper">
         <div class="event-text">
-          <h1>Pick and schedule an Event</h1>
+          <h1>Browse Event by Categoty</h1>
           <div class="events">
-            <span id="wedding-event">Wedding</span>
-            <span id="luncheon-event">Luncheon</span>
-            <span id="party-event">Party</span>
-            <span id="get-together-event">Get Together</span>
+            <div class="event-img">
+              <img src="./assets/concerts.jpg" alt="" />
+              <p>Concerts</p>
+            </div>
+            <div class="event-img">
+              <img src="./assets/family.jpg" alt="" />
+              <p>Family</p>
+            </div>
+            <div class="event-img">
+              <img src="./assets/theater.jpg" alt="" />
+              <p>Theater</p>
+            </div>
+            <div class="event-img">
+              <img src="./assets/sports.jpg" alt="" />
+              <p>Sports</p>
+            </div>
           </div>
         </div>
         <div class="event-form">
