Change image file to url

--- a/index.html
+++ b/index.html
@@ -53,19 +53,31 @@
           <h1>Browse Event by Categoty</h1>
           <div class="events">
             <div class="event-img">
-              <img src="./assets/concerts.jpg" alt="" />
+              <img
+                src="https://images.unsplash.com/photo-1499364615650-ec38552f4f34?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fGNvbmNlcnRzfGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+                alt=""
+              />
               <p>Concerts</p>
             </div>
             <div class="event-img">
-              <img src="./assets/family.jpg" alt="" />
+              <img
+                src="https://images.unsplash.com/photo-1561525140-c2a4cc68e4bd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZmFtaWx5fGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+                alt=""
+              />
               <p>Family</p>
             </div>
             <div class="event-img">
-              <img src="./assets/theater.jpg" alt="" />
+              <img
+                src="https://images.unsplash.com/photo-1588928781379-c355ab3edc9b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fHRoZWF0ZXJ8ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+                alt=""
+              />
               <p>Theater</p>
             </div>
             <div class="event-img">
-              <img src="./assets/sports.jpg" alt="" />
+              <img
+                src="https://images.unsplash.com/photo-1612872087720-bb876e2e67d1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fHNwb3J0c3xlbnwwfDB8MHx8&auto=format&fit=crop&w=500&q=60"
+                alt=""
+              />
               <p>Sports</p>
             </div>
           </div>
