--- a/index.html
+++ b/index.html
@@ -102,7 +102,27 @@
             <form action="">
               <div>
                 <label for="">Pick a date</label>
-                <input type="date" />
+                <div class="pick-date-wrapper">
+                  <header>
+                    <p class="current-date"></p>
+                    <div class="icons">
+                      <span id="prev" class="material-symbols-rounded"><</span>
+                      <span id="next" class="material-symbols-rounded">></span>
+                    </div>
+                  </header>
+                  <div class="calendar">
+                    <ul class="weeks">
+                      <li>Sun</li>
+                      <li>Mon</li>
+                      <li>Tue</li>
+                      <li>Wed</li>
+                      <li>Thu</li>
+                      <li>Fri</li>
+                      <li>Sat</li>
+                    </ul>
+                    <ul class="days"></ul>
+                  </div>
+                </div>
               </div>
               <div>
                 <label for="">Schedule a time</label>
